add env admin and response edit

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ CLOUDINARY_API_SECRET=DDXF46grWk13bPZzDqO7sIWgWVw
 JWT_SECRET = qwertyuiop123456789WERTYUIOP
 JWT_EXPIRE=1d
 COOKIE_EXPIRE =5d
+FULLNAME = mohit ashta
+EMAIL = mohit.ashta@email.com
+PASSWORD = @mohit.ashta@icloud.com@
+ROLE = admin
