changes in update flow

--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ JWT_EXPIRE=1d
 COOKIE_EXPIRE =5d
 FULLNAME = mohit ashta
 EMAIL = mohit.ashta@email.com
-PASSWORD = @mohit.ashta@icloud.com@
+PASSWORD = mohit.ashta@email.com
 ROLE = admin
